# SearchEngine

./: .gitignore  .~lock.general-scheme.odg#  CMakeLists.txt  LICENSE.MIT  README.md  TODO.txt  answers.json  config.json  description.txt  general-scheme.odg
check/: CMakeLists.txt  check.pc.in  checkFile.cpp  checkFileException.h  operationFileAndJSON.cpp  operationFileAndJSON.h  types.h
include/: Initialization.h  (+28 more)
kav_check/: CMakeLists.txt  tmp
kav_check/cmake/: config.cmake.in
kav_check/include/kav/: errorCode.h  operationFileAndJSON.h
kav_check/src/: checkFile.cpp  operationFileAndJSON.cpp
kav_check/tests/: CMakeLists.txt  test.cpp  testCheckFile.cpp  testCheckFilePathAndRequestsArrays.cpp  testGeneral.cpp  testGeneral.h  testOperation.cpp
kav_check/tests/resources/: answers.json  share.bat
kav_logger_monitor/: CMakeLists.txt
kav_logger_monitor/include/: general.h
kav_logger_monitor/kav_check/tests/: test.cpp  testOperation.cpp
kav_logger_monitor/libraries/kav_check/: CMakeLists.txt
kav_logger_monitor/libraries/kav_fileOperations/: CMakeLists.txt
kav_logger_monitor/src/: CMakeLists.txt  main.cpp  monitor.cpp  monitor.h  monitorReceiver.cpp  monitorReceiver.h
kav_logger_monitor/tests/: CMakeLists.txt  main.cpp  monitorSender.cpp  monitorSender.h  test.cpp  testGeneral.cpp  testGeneral.h  testLoggerMonitor.cpp
kav_logger_monitor/tests/resources/: messageQueue-notMatch.json  messageQueue.json
libraries/kav_logger/tests/: CMakeLists.txt  main.cpp  monitor.cpp  monitor.h  monitorReceiver.cpp  monitorReceiver.h  test.cpp  testGeneral.cpp  testGeneral.h  testLogger.cpp
monitor/: CMakeLists.txt  checkFileException.h  general.cpp  general.h  main.cpp  monitor.cpp  monitor.h  monitorReceive.cpp  monitorReceiver.cpp  monitorReceiver.h  readWriteJSONFile.cpp  readWriteJSONFile.h  termcolor.h
monitor/kav_check/: CMakeLists.txt
monitor/src/: main.cpp  monitor.cpp  monitor.h  monitorReceiver.h
src/: CMakeLists.txt  constants.cpp  exitProgram.cpp  main.cpp  programArguments.cpp  programArguments.h
src/Logger/: config.cpp  error.cpp  fatal.cpp  getFile.cpp  identifyFile.cpp  info.cpp  initialize.cpp  logger.cpp  loging.cpp  run.cpp  setup.cpp  warn.cpp  writeToFileAndMonitor.cpp
src/checkFile/: checkFile.cpp  initial.cpp  isEmpty.cpp  isExist.cpp  isJSONStructureMatch.cpp  isJSONStructureMatchImpl.cpp  isJSONStructureValid.cpp
src/converterJSON/: about.cpp  accumulateRank.cpp  check.cpp  checkFilePath.cpp  checkRequests.cpp  convertIdtoStr.cpp  converterJSON.h  getAnswersJSON.cpp  getFilePaths.cpp  getMaxResponses.cpp  getRequests.cpp  misc.cpp  putAnswers.cpp  setAnswersJSON.cpp
src/dispatcherDetermineValidity/: DispatcherOperationValidity.cpp  dispatcherDetermineValidity.cpp  dispatcherDetermineValidity.h
src/dispatcherOperationValidity/: DispatcherOperationValidity.cpp  DispatcherOperationValidity.h
src/dispatcherOperations/: DispatcherOperations.cpp  DispatcherOperations.h  determineValidity.cpp  dispatcherOperations.cpp  dispatcherOperations.h  misc.cpp  readMultipleTextFiles.cpp  readMultipleTextFilesSequentially.cpp
src/documents/: characterToLower.cpp  clearDocuments.cpp  documents.cpp  documents.h  getDocuments.cpp  updateDocuments.cpp
src/documentsPaths/: documentsPaths.cpp  documentsPaths.h
src/fileOperation/: fileOperation.cpp
src/general/: checkFile.cpp  constants.cpp  exitProgram.cpp  general.cpp  general.h  pressAnyKey.cpp
src/initial/: checkFileEmpty.cpp  checkFileExists.cpp  checkFileStructureValid.cpp  checkJSONStructureValid.cpp  initialization.cpp  initialize.cpp
src/initialization/: checkFileEmpty.cpp  checkFileExists.cpp  checkJSONStructureValid.cpp  initial.cpp
src/invertedIndex/: addWord.cpp  clearInvertedIndexes.cpp  defineWord.cpp  getInvertedIndexes.cpp  invertedIndex.h  misc.cpp  sortByAscendingDocumentID.cpp  startInvertedIndexing.cpp  startThreads.cpp  updateInvertedIndexes.cpp
src/monitor/: monitor.cpp
src/monitorSender/: monitorSender.cpp
src/operationValidity/: operationFileAndJSON.cpp  operationValidity.cpp
src/parallelization/: startThreads.cpp
src/readTextFile/: readTextFile.cpp  readTextFile.h
src/readWriteJSONFile/: readJSONFile.cpp  readWriteJSONFile.cpp  writeJSONFile.cpp
src/readWriteTextFile/: readTextFile.cpp
src/relevantResponse/: clearRelevantResponses.cpp  countRelevanceOfResponses.cpp  discoverNumberOfDocuments.cpp  evaluateRelativeRelevance.cpp  getInvertedIndexStructures.cpp  getRelevantResponses.cpp  misc.cpp  relevantResponse.h  roundUpToPrecision.cpp  sortByDescendingRelevance.cpp  updateRelevantResponses.cpp
src/requests/: characterToLower.cpp  clearRequests.cpp  getRequests.cpp  misc.cpp  requests.cpp  requests.h  updateRequests.cpp
src/searchEngine/: config.cpp  exportRelevantResponses.cpp  searchEngine.h  searchModified.cpp  searchModifiedAll.cpp  searchModifiedDocuments.cpp  searchModifiedRequests.cpp
tests/: .gitignore  CMakeLists.txt  jsonTemplates.cpp  main.cpp  test.cpp  testCheckAnswers.cpp  testCheckFile.cpp  testCheckFilePathAndRequestsArrays.cpp  testCheckSetAnswers.cpp  testConverterJSON.cpp  testDispatcherOperations.cpp  testDispatcherOperations_checkFilePathsArray.cpp  testDispatcherOperations_checkJSONStructureMatch.cpp  testDispatcherOperations_checkRequestsArray.cpp  testDispatcherOperations_readJSONFile.cpp  testDispatcherOperations_readMultipleTextFiles.cpp  testDispatcherOperations_readMultipleTextFilesSequentially.cpp  testDispatcherOperations_readTextFile.cpp  testDispatcherOperations_writeJSONFile.cpp  testDocuments.cpp  testGeneral.cpp  testGeneral.h  testInvertedIndex.cpp  testRelevantResponse.cpp  testRequests.cpp  testSearchEngine.cpp  testSetAnswers.cpp  сonverterJSON.cpp
tests/resources/: config-test-2.json  config-test-file003-missing.json  config-test-files-empty.json  config.json  configNotMatch.json  configNotValid.json  logger-test.json  logger.json  messageQueue-test.json  messageQueue.json  readJSONFile.json  requests-test.json  requests.json
tmp/: CMakeLists-kav_check.txt  CMakeLists-nlohmann_json.txt  CMakeLists.txt
(+8831 files in other folders)
